@@ -1,3 +1,7 @@
+Wed Dec 23 17:23:52 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* eval.c (rb_load): initialize orig_func.   [ruby-core:27296]
+
 Tue Dec 22 10:59:56 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>
 
 	* test/net/http/test_post_io.rb: parse chunked stream to avoid client
